[tool.poetry]
name = "instagram"
version = "0.1.0"
description = "instagram using crewAI"
authors = ["Your Name Mahesh"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.61.0,<1.0.0" }


[tool.poetry.scripts]
instagram = "instagram.main:run"
run_crew = "instagram.main:run"
train = "instagram.main:train"
replay = "instagram.main:replay"
test = "instagram.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
